Add various tools for database verification, cleanup, and QA testing
- Implemented `check_db_counts.py` for quick verification of row counts in key database tables.
- Created `cleanup_temp_files.py` to remove temporary, cache, and build artifacts with options for dry run and IDE configurations.
- Developed `dev_fresh_run_and_qa.py` for a one-shot developer smoke test combining a crawl and QA checks.
- Enhanced `init_db.py` to verify and list created tables after initializing the database schema.
- Updated `load_runs_to_db.py` to include verbose logging and improved error handling during the loading process.
- Added `system_full_check.py` to include a database data verification step in the system check process.
- Introduced `test_qa_helper.py` for an interactive QA testing workflow, allowing unit tests, smoke tests, and project comparisons.

--- a/tests/qa/fixtures/detail_page.html
+++ b/tests/qa/fixtures/detail_page.html
@@ -1,16 +1,16 @@
 <html>
   <body>
     <table class="table table-bordered">
-      <tr><td>Registration Number</td><td>CG-REG-001</td></tr>
-      <tr><td>Project Name</td><td>Garden Villas</td></tr>
-      <tr><td>District</td><td>Raipur</td></tr>
-      <tr><td>Tehsil</td><td>Tilda</td></tr>
-      <tr><td>Project Status</td><td><button>Preview</button></td></tr>
+      <tr><td><label>Registration Number</label></td><td><span>CG-REG-001</span></td></tr>
+      <tr><td><label>Project Name</label></td><td><span>Garden Villas</span></td></tr>
+      <tr><td><label>District</label></td><td><span>Raipur</span></td></tr>
+      <tr><td><label>Tehsil</label></td><td><span>Tilda</span></td></tr>
+      <tr><td><label>Project Status</label></td><td><button>Preview</button></td></tr>
     </table>
     <table>
-      <tr><td>Project Type</td><td>Residential</td></tr>
-      <tr><td>Project Address</td><td>Near City Center</td></tr>
-      <tr><td>Launch Date</td><td>2023-01-15</td></tr>
+      <tr><td><label>Project Type</label></td><td>Residential</td></tr>
+      <tr><td><label>Project Address</label></td><td>Near City Center</td></tr>
+      <tr><td><label>Launch Date</label></td><td>2023-01-15</td></tr>
     </table>
   </body>
 </html>
